--- a/Coursework/Login.html
+++ b/Coursework/Login.html
@@ -39,32 +39,10 @@
             <!--the signup.php is where the details will be added to the database-->
             <form id="signup" class="input-box" name="form1" action="Signup.php" method="POST">
 
-                <div class="input-container">
-                    <i class="fa-solid fa-user"></i>
-                    <input type="text" class="input-field" placeholder="Staff Number" name="staffNumber" required>
+                <div>
+                    <p>Ask an admin to sign you up</p>
                 </div>
-                <div class="input-container">
-                    <i class="fa-solid fa-user"></i>
-                    <input type="text" class="input-field" placeholder="First name" name="firstName" required>
-                </div>
-                <div class="input-container">
-                    <i class="fa-solid fa-user"></i>
-                    <input type="text" class="input-field" placeholder="Last name" name="lastName" required>
-                </div>
-                <div class="input-container">
-                    <i class="fa-solid fa-envelope"></i>
-                    <!--relevant classes for CSS-->
-                    <input type="text" class="input-field" placeholder="Email" name="email" required>
-                </div>
-                <div class="input-container">
-                    <i class="fa-solid fa-lock"></i>
-                    <input type="text" class="input-field" placeholder="Password" name="password" required>
-                </div>
-                <div class="input-container">
-                    <i class="fa-solid fa-user"></i>
-                    <input type="text" class="input-field" placeholder="Team" name="team" required>
-                </div>
-                <button type="submit" class="enter-btn" name="form1"><b>Sign up</b></button>
+                
 
             </form>
         </div>
