--- a/Coursework/Login.html
+++ b/Coursework/Login.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -13,11 +14,7 @@
     <div class="box">
         <div class="form">
 
-            <div class="button-box">
-                <div id="btn" class="btn"></div>
-                <button type="button" class="toggle-btn" onclick="login()"><b>Log In</b></button>
-                <button type="button" class="toggle-btn" onclick="signup()"><b>Sign up</b></button>
-            </div>
+            <h2 class="login-header">Log In</h2> <!-- Header for login -->
 
             <img src="Images/Logo.png" alt="Logo" class="logo">
             <!--creating a login form so user can submit the login details, these will be checked against using POST method-->
@@ -35,21 +32,8 @@
                 <button type="submit" class="enter-btn" name="submit"><b>Log In</b></button>
             </form>
 
-            <!--creating a sign form so user can sign up, provided all fields are filled in these are submitted to the database using POST method-->
-            <!--the signup.php is where the details will be added to the database-->
-            <form id="signup" class="input-box" name="form1" action="Signup.php" method="POST">
-
-                <div>
-                    <p>Ask an admin to sign you up</p>
-                </div>
-                
-
-            </form>
         </div>
     </div>
-
-    <!--toggle button between login and signup-->
-    <script src="login.js"></script>
 
 </body>
 
