--- a/Coursework/Signup.html
+++ b/Coursework/Signup.html
@@ -19,7 +19,7 @@
         <div class="menuitems"><a href="normalUser.php">My Tasks</a></div>
         <div class="menuitems"><a href="SearchTask.php">Search Task</a></div>
         <div class="menuitems"><a href="Signup.html">Signup User</a></div>
-        <div class="menuitems"><a href="login.html">Logout</a></div>
+        <div class="menuitems"><a href="logout.php">Logout</a></div>
     </div>
 
    
