--- a/Coursework/Signup.html
+++ b/Coursework/Signup.html
@@ -14,6 +14,7 @@
 <body>
     <!--code for the navbar-->
     <div class="navbar">
+        <!--menu items with appropriate links-->
         <div class="menuitems"><a href="createTask.php">Create Task</a></div>
         <div class="menuitems"><a href="tasks.php">All Tasks</a></div>
         <div class="menuitems"><a href="normalUser.php">My Tasks</a></div>
@@ -27,29 +28,29 @@
 
         <div class="form">
 
-            <h2 class="signup-header">Sign up</h2>
+            <h2 class="signup-header">Sign up</h2> <!--signup header-->
 
-            <img src="Images/Logo.png" alt="Logo" class="logo">
+            <img src="Images/Logo.png" alt="Logo" class="logo"> <!--company logo-->
 
             <form id="signup" class="input-box" name="form1" action="Signup.php" method="POST">
                 
-                <div class="input-container">
+                <div class="input-container"> <!--inpu field for staff number-->
                     <i class="fa-solid fa-user"></i>
                     <input type="text" class="input-field" placeholder="Staff Number" name="staffNumber" required>
                 </div>
 
                 <div class="input-container">
-                    <i class="fa-solid fa-user"></i>
+                    <i class="fa-solid fa-user"></i> <!--all the following input fields are for the relevant parts of a sign up form e.g., lastname etc-->
                     <input type="text" class="input-field" placeholder="First name" name="firstName" required>
                 </div>
 
                 <div class="input-container">
-                    <i class="fa-solid fa-user"></i>
+                    <i class="fa-solid fa-user"></i><!--all the following input fields are for the relevant parts of a sign up form e.g., lastname etc-->
                     <input type="text" class="input-field" placeholder="Last name" name="lastName" required>
                 </div>
 
                 <div class="input-container">
-                    <i class="fa-solid fa-envelope"></i>
+                    <i class="fa-solid fa-envelope"></i><!--all the following input fields are for the relevant parts of a sign up form e.g., lastname etc-->
                     <input type="text" class="input-field" placeholder="Email" name="email" required>
                 </div>
 
